tests/machine/x/c/break_continue.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/break_continue.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/break_continue.c:41:17: error: subscripted value is neither array nor pointer nor vector
   41 |     int n = tmp1[tmp2];
      |                 ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:47Z
